# AnimeImageManager

./: .dockerignore  .gitignore  docker-bake.hcl  docker-compose.yml  dockerfile  readme.md  requirements.txt  run_all.sh
PixivDownloader/: main.py  pyvenv.cfg  requirements.txt
TagManager/: Cargo.toml
TagManager/migrations/: 20250613191517_init.down.sql  20250613191517_init.up.sql
TagManager/src/: database.rs  main.rs  processor.rs  tag_fetcher.rs
TagService/: main.py  pyvenv.cfg  requirements.txt
frontend/: Cargo.toml
frontend/assets/styling/: image.css  main.css
frontend/src/: main.rs
frontend/src/components/: image.rs  mod.rs
frontend/src/requests/: api_requests.rs
frontend/src/responses/: api_response.rs
frontend/src/views/: home.rs  mod.rs  navbar.rs  profile.rs  search.rs
tag_api/: Cargo.toml
tag_api/src/: database.rs  endpoints.rs  main.rs  requests.rs  response.rs
tag_manager/: Cargo.toml
tag_manager/migrations/: 20250613191517_init.down.sql  20250613191517_init.up.sql
tag_manager/src/: database.rs  image_path.rs  main.rs  processor.rs  tag_fetcher.rs
