[package]
name = "TagManager"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid" ] }
image = { version = "0.24", features = ["jpeg", "png"] }
imagehash = "0.3.0"
dotenv = "0.15.0"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["multipart", "json", "stream", "blocking"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rayon = "1.10.0"
